--- a/index.html
+++ b/index.html
@@ -141,12 +141,11 @@
         <img src="images/01-SoC.png" alt="SYNTHESIS OF CORRUPTION">
         <div class="game-card-content">
           <div class="game-title">SYNTHESIS OF CORRUPTION</div>
-          <div class="release-date">Released: TBA</div>
+          <div class="release-date">Steam: 26 Jan, 2026</div>
           <div class="game-description">Emergency Protocol activated: Dark Energy Particle Synthesis failed. Now you — late and alone — must navigate a facility where science and sanity have collapsed. Face entities born from dark energy corruption in this atmospheric FPS-horror hybrid where human ambition meets primal terror.</div>
 		  <p />
           <div class="store-links">
             <a href="https://store.steampowered.com/app/3629200/Synthesis_of_Corruption/"><img src="icons/steam.svg" alt="Steam"></a>
-			<a href="https://vidygames.itch.io/synthesis-of-corruption"><img src="icons/itch-io.svg" alt="itch.io Demo"></a>
             <!-- 
 			<a href="#"><img src="icons/xbox.svg" alt="Xbox"></a>
             <a href="#"><img src="icons/playstation.svg" alt="PlayStation"></a>
