--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         <img src="images/01-SoC.png" alt="SYNTHESIS OF CORRUPTION">
         <div class="game-card-content">
           <div class="game-title">SYNTHESIS OF CORRUPTION</div>
+		  <div class="game-title">FPS-Survival Horror</div>
           <div class="release-date">Steam: 26 Jan, 2026</div>
           <div class="game-description">Emergency Protocol activated: Dark Energy Particle Synthesis failed. Now you — late and alone — must navigate a facility where science and sanity have collapsed. Face entities born from dark energy corruption in this atmospheric FPS-horror hybrid where human ambition meets primal terror.</div>
 		  <p />
@@ -160,6 +161,7 @@
         <img src="images/02-SnowGrip.png" alt="SNOWSQUALL GRIP">
         <div class="game-card-content">
           <div class="game-title">SNOWSQUALL GRIP</div>
+		  <div class="game-title">First-Person Horror Walking Sim</div>
           <div class="release-date">Released: 01 Aug, 2024 (Steam); 17 Apr, 2025 (XBox\PS\NSwitch)</div>
           <div class="game-description">Your helicopter crashes in a remote, icy wilderness en route to delivering batteries to a mysterious research facility.
 Now, you must complete your delivery before you freeze to death or get eaten by a strange presence stalking you. Escape the snowy nightmare or be trapped forever — your call.</div>
@@ -177,6 +179,7 @@ Now, you must complete your delivery before you freeze to death or get eaten by 
         <img src="images/03-Plasto.png" alt="PLASTOMORPHOSIS">
         <div class="game-card-content">
           <div class="game-title">PLASTOMORPHOSIS</div>
+		  <div class="game-title">3rd-person Retro Survival Horror</div>
           <div class="release-date">Released: 24 Jan, 2024 (Steam); 02 Aug, 2024 (XBox\PS\NSwitch)</div>
           <div class="game-description">Evacuated from his hometown due to the dangerous bursts of dark energy, the ordinary citizen is trying to overcome and survive a series of events in a new reality, where living as a human being is not possible anymore. 3rd-person horror with fixed camera angles and retro-styled graphics.</div>
           <div class="store-links">
@@ -193,6 +196,7 @@ Now, you must complete your delivery before you freeze to death or get eaten by 
         <img src="images/04-Plasto2.png" alt="PLASTOMORPHOSIS: FINAL CORRUPTION">
         <div class="game-card-content">
           <div class="game-title">PLASTOMORPHOSIS: FINAL CORRUPTION.</div>
+		  <div class="game-title">Survival Horror</div>
           <div class="release-date">TBA</div>
           <div class="game-description">The Government District is rocked by a dark energy surge, leading a resistance agent to a shocking revelation — the PLASTOMORPHOSIS experiment isn't over. It’s time to stop it before it’s POWER spirals out of CONTROL.</div>
           <div class="store-links">
@@ -209,6 +213,7 @@ Now, you must complete your delivery before you freeze to death or get eaten by 
         <img src="images/04-ForraderHero.png" alt="FORRADER HERO">
         <div class="game-card-content">
           <div class="game-title">FORRADER HERO</div>
+		  <div class="game-title">Turn-Based 2D Pixel-Art Roguelike</div>
           <div class="release-date">Released: 02 Aug, 2022 (Early Access), 23 Jan, 2023 (Steam); 29 Mar, 2024 (XBox\PS\NSwitch)</div>
           <div class="game-description">Turn-based game with roguelike elements where heroes can’t step back and must fight through the end to save their soul in ‘Forgotten Proto.World’ fighting hordes of monsters, undead creatures, and their overlords.</div>
           <div class="store-links">
@@ -225,6 +230,7 @@ Now, you must complete your delivery before you freeze to death or get eaten by 
         <img src="images/06-resurs.png" alt="RE.SURS ">
         <div class="game-card-content">
           <div class="game-title">RE.SURS</div>
+		  <div class="game-title">2D Pixel-Art Side-Scroller Beat'em/Shoot'em up</div>
           <div class="release-date">Released: 08 Nov, 2021 (Steam); 12 Oct, 2023 (XBox\PS\NSwitch)</div>
           <div class="game-description">Story-driven 2D side-scrolling shoot’em up where heroes tag-team and use their abilities to fight an interdimensional invasion of demons.</div>
           <div class="store-links">
